bin/tests/snapshots/hardcoded_store_path__1b2e1e529e2feefe0dac3bf1cf38479c_fix.snap
---
source: bin/tests/hardcoded_store_path.rs
---
/nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/bin/hello
---
