bin/tests/snapshots/hardcoded_store_path__1b2e1e529e2feefe0dac3bf1cf38479c_lint_stderr.snap
---
source: bin/tests/hardcoded_store_path.rs
---
/nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/bin/hello
---
[hardcoded_store_path] Warning: Found hardcoded Nix store path
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ /nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/bin/hello
   │ ─────────────────────────────────┬────────────────────────────────  
   │                                  ╰────────────────────────────────── Hardcoded store path, interpolate the package instead (e.g. ${pkgs.hello})
───╯
