bin/tests/snapshots/hardcoded_store_path__81fabbdc627e2faee8ed77e1711cf4d1_fix.snap
---
source: bin/tests/hardcoded_store_path.rs
---
"/nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/bin/hello"
---
