bin/tests/snapshots/hardcoded_store_path__b380bab6bb2d349449613277ecb050b7_fix.snap
---
source: bin/tests/hardcoded_store_path.rs
---
''
  cat /nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/share/x; echo
''
---
