bin/tests/snapshots/hardcoded_store_path__b380bab6bb2d349449613277ecb050b7_lint_json.snap
---
source: bin/tests/hardcoded_store_path.rs
---
''
  cat /nix/store/q2l6gv5cdyx2ayx6frgz2rmd0mp4q6sw-hello-2.12.1/share/x; echo
''
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "hardcoded_store_path",
      "note": "Found hardcoded Nix store path",
      "code": 26,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 7
            },
            "to": {
              "line": 2,
              "column": 71
            }
          },
          "message": "Hardcoded store path, interpolate the package instead (e.g. `${pkgs.hello}`)",
          "suggestion": null
        }
      ]
    }
  ]
}
